// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceActionButton Create button in the list observer Renders the component 1`] = `
<fragment-stub>
  <fragment-stub><span><div data-test="action-item" class="v-list-item__title">
            accept
          </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="action-icon" class="v-icon notranslate v-icon--disabled v-icon--left mdi mdi-check theme--light"></i></span> </fragment-stub>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceActionButton Create button in the list owner Renders the component 1`] = `
<fragment-stub>
  <fragment-stub><span><div data-test="action-item" class="v-list-item__title">
            accept
          </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="action-icon" class="v-icon notranslate v-icon--left mdi mdi-check theme--light"></i></span> </fragment-stub>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceActionButton Create button in the notification observer Renders the component 1`] = `
<fragment-stub>
  <fragment-stub><button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--x-small primary" data-test="notification-btn"><span class="v-btn__content">
      Accept
    </span></button></fragment-stub>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceActionButton Create button in the notification owner Renders the component 1`] = `
<fragment-stub>
  <fragment-stub><button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--x-small primary" data-test="notification-btn"><span class="v-btn__content">
      Accept
    </span></button></fragment-stub>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceActionButton Dialog observer Renders the component 1`] = `
<fragment-stub>
  <fragment-stub><span><div data-test="action-item" class="v-list-item__title">
            accept
          </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="action-icon" class="v-icon notranslate v-icon--disabled v-icon--left mdi mdi-check theme--light"></i></span> </fragment-stub>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceActionButton Dialog owner Renders the component 1`] = `
<fragment-stub>
  <fragment-stub><span><div data-test="action-item" class="v-list-item__title">
            accept
          </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="action-icon" class="v-icon notranslate v-icon--left mdi mdi-check theme--light"></i></span> </fragment-stub>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`DeviceActionButton Reject button in the list observer Renders the component 1`] = `
<fragment-stub>
  <fragment-stub><span><div data-test="action-item" class="v-list-item__title">
            reject
          </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="action-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">close</i></span> </fragment-stub>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceActionButton Reject button in the list owner Renders the component 1`] = `
<fragment-stub>
  <fragment-stub><span><div data-test="action-item" class="v-list-item__title">
            reject
          </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="action-icon" class="v-icon notranslate v-icon--left material-icons theme--light">close</i></span> </fragment-stub>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceActionButton Remove button in the list observer Renders the component 1`] = `
<fragment-stub>
  <fragment-stub><span><div data-test="action-item" class="v-list-item__title">
            remove
          </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="action-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">delete</i></span> </fragment-stub>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceActionButton Remove button in the list owner Renders the component 1`] = `
<fragment-stub>
  <fragment-stub><span><div data-test="action-item" class="v-list-item__title">
            remove
          </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="action-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></span> </fragment-stub>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
